[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/Amber Forest piano.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Fonts/DynamicFonts/Open_Sans_SemiBold_42px.tres" type="DynamicFont" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="VolumeContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_right = 1180.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="VBoxContainer/VolumeContainer"]
margin_right = 151.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "volume"

[node name="VolumeHSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
margin_left = 163.0
margin_right = 1180.0
margin_bottom = 16.0
max_value = 1.0
step = 0.0

[node name="FullScreenContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 1180.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="VBoxContainer/FullScreenContainer"]
margin_right = 200.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="VBoxContainer/FullScreenContainer"]
margin_left = 212.0
margin_right = 1180.0
margin_bottom = 58.0

[node name="LanguageContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 1180.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="VBoxContainer/LanguageContainer"]
margin_top = 3.0
margin_right = 184.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 3 )
text = "language"

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/LanguageContainer"]
margin_left = 196.0
margin_right = 1180.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "teste"
switch_on_hover = true

[node name="GoBackButton" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 1180.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 3 )
text = "go-back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
[connection signal="value_changed" from="VBoxContainer/VolumeContainer/VolumeHSlider" to="." method="_on_VolumeHSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/FullScreenContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_pressed"]
[connection signal="pressed" from="VBoxContainer/GoBackButton" to="." method="_on_GoBackButton_pressed"]
